--- a/components/form.html
+++ b/components/form.html
@@ -115,7 +115,7 @@
             })
         });
 
-        // Load Form iFrame after the document is loaded. and set the url to return to correct catagory
+        // Load Form iFrame after the document is loaded. and set the url to return to correct category
         $(document).ready(function () {
             // Set url to the current loan type
             //$('#walkthrough-link').attr("href", `/walkthrough.html?${getCookie("currentLoanType")}`);
